# hacs-linky

./: README.md  hacs.json  pyproject.toml
custom_components/linky/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  services.yaml  strings.json
custom_components/linky/translations/: en.json  fr.json
tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py  test_init.py  test_sensor.py
